--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,6 @@
   white-space: nowrap; /* added line */
 }
 
-.container {
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 0 1rem;
-}
-
 .page-wrapper {
   height: 80vh;
   width: 60vw;
@@ -22,10 +16,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.project-container {
-  display: flex;
 }
 
 .project-item:first-child {
@@ -37,15 +27,11 @@
 }
 
 .project-item_img {
-  width: 60%;
-  padding: 3em;
+  width: 100%;
+  height: 200px;
   background-color: #f8f8f8;
-  object-fit: scale-down;
-}
-
-.project-item_btn-wrapper {
-  display: flex;
-  margin-top: 2em;
+  /* object-fit: scale-down; */
+  object-fit: cover;
 }
 
 .btn_project {
@@ -124,7 +110,7 @@
   transition: 0.3s ease-in-out;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 640px) {
   .project-item_img {
     width: 100%;
     margin-bottom: 2vmin;
